<resources>
    <string name="app_name">LoanApplication</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="signup_fragment">Signup Fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="let_s_get_you_in">Let\'s get you in</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_create_you_an_account">Let\'s create you an account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?</string>
    <string name="sign_up_">( Sign Up )</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="loan_fragment">Loan Fragment</string>
</resources>